tests/cases/ok/from_import_alias_main.p4
from from_import_alias_helpers import twice as double
from math import abs as magnitude

def main() -> None:
    print(double(4))
    print(double(1.5))
    print(magnitude(-5))
