tests/cases/fail/json_to_string_non_class.p4
import json


def main() -> None:
    print(json.to_string(1))
